# melpomene

./: .coveragerc  .searcher.py.swp  Dockerfile  METADATA  Pipfile  Readme.rst  searcher.py  setup.cfg  setup.py
.github/: CONTRIBUTING.md
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
melpomene/: __init__.py
tests/features/: package.feature
tests/features/steps/: steps_package.py
tests/unit/: test_import.py
