[metadata]
name = melpomene
author = David Francos Cuartero
python-requires = ==3.7

[entry_points]
console_scripts =
   melpomene=melpomene:main

[tool:pytest]
flake8-ignore =
    doc/conf.py ALL

addopts=--flake8 -m "not wip" -vv --cov-report html:.cov_html --cov-report term --cov melpomene

[pbr]
autodoc_tree_index_modules=True

[build_sphinx]
builder=html
source-dir=docs/source

[alias]
test=pytest behave

[extras]
doc =
    sphinx
    sphinxcontrib-napoleon
    sphinxcontrib-httpdomain

